# html-strong-homepage

./: .gitignore  Cargo.toml
code/tracing-explore/: Cargo.toml  log-macros-expanded.rs  log-macros-fields-values-expanded.rs  tracing-01.excalidraw
html-strong-homepage/: Cargo.toml
html-strong-homepage/code/tracing-explore/: async-span-instrument-proc-macro-expanded.rs  async-span-problem-expanded.rs  log-macros-fields-values-expanded.rs  span-expanded.rs  tracing-02.excalidraw
html-strong-homepage/src/: base.rs  blender.rs  common.rs  components.rs  herbs.rs  home.rs  lib.rs  listing.rs  main.rs  page.rs
html-strong-homepage/src/blender/: low_poly_characters.rs  low_poly_landscapes.rs  misc.rs
html-strong-homepage/src/blog/: tracing.rs
html-strong-homepage/src/herbs/: basil.rs
html-strong-homepage/static/blender/low-poly-characters/more-folks/: more-folks.blend
html-strong-homepage/static/blender/low-poly-characters/simple-character/: block-characters.blend  cool-person.blend
html-strong-homepage/static/blender/low-poly-landscapes/bye-landscapes/: bye.blend
html-strong-homepage/static/blender/low-poly-landscapes/hello-landscapes/: hello.blend
html-strong-homepage/static/css/shared/: shared.css
html-strong-homepage/static/js/: highlight.min.js  shared.js
img-to-webp/: Cargo.toml
img-to-webp/src/: main.rs
post-image-in-intervals/src/: main.rs
shared/: Cargo.toml
shared/src/: herbs.rs  image.rs  lib.rs
src/: base.rs  blender.rs  blog.rs  common.rs  components.rs  herbs.rs  home.rs  lib.rs  listing.rs  main.rs  page.rs  training.rs
src/blender/: low_poly_characters.rs  low_poly_landscapes.rs
src/blog/: tracing.rs
src/herbs/: basil.rs
static/blender/low-poly-characters/cyborg-follow-up/: cyborg-lights-animation.webm
static/blender/low-poly-characters/hello-world/: adding-objects.blend
static/blender/low-poly-characters/simple-character/: block-characters.blend  cool-person.blend  simple-characters.blend
static/css/blender/: blender.css
static/css/blog/: blog.css
static/css/shared/: shared.css
timelapsifier/: Cargo.toml
timelapsifier/src/: lib.rs
utils/img-to-webp/: Cargo.toml
utils/img-to-webp/src/: main.rs
utils/png-to-webp/: Cargo.toml
utils/png-to-webp/src/: main.rs
utils/post-image-in-intervals/: Cargo.toml
utils/post-image-in-intervals/src/: image.rs  main.rs
utils/shared/src/: image.rs
