[package]
name = "html-strong-homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
html-strong = { path = "../html-strong" }

axum = "0.5"
axum-extra = { version = "0.2", features = ["cookie"] }

tracing = "0.1.32"
tracing-subscriber = "0.3.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["fs", "trace", "compression-full"] }
reqwest = { version = "0.11", features = ["json"] }

# serde = { version = "1.0.136", features = ["derive"] }
# futures = "0.3"
# cached = "0.34.0"
# url = { version = "2.2.2", features = ["serde"] }
# chrono = { version = "0.4.19", features = ["serde"] }
# serde_json = "1"
# mime = "0.3"


# examples-lib = { path = "../examples-lib" }

# Examples
# hacker-news = { path = "../hacker-news" }
# markdown-blog = { path = "../markdown-blog" }
