[package]
name = "html-strong-homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
html-strong = { path = "../html-strong" }

axum = "0.5"
axum-extra = { version = "0.2", features = ["cookie"] }

tracing = "0.1.32"
tracing-subscriber = "0.3.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["fs", "trace", "compression-full"] }
reqwest = { version = "0.11", features = ["json"] }
html-escape = "0.2.11"

axum-server = { version = "0.3", features = ["tls-rustls"], optional = true }

[features]
tls = ["axum-server"]
