[package]
name = "post-image-in-intervals"
version = "0.1.0"
edition = "2021"

[features]
use-webcam = []

[dependencies]
shared = { path = "../shared" }
chrono = { version = "0.4.19" }

image = "0.24.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
